# emc

./: .gitignore  CMakeLists.txt  Makefile  README.md  configuration.c  configuration.h  emc.c  emc.conf  emc.files  emc.h  emc.includes  emc_atomic.cu  emc_cuda.cu  generate_all_rotation_files.py  launch_slicer.sh  modify_configuration.c  plot_model_qt.py  plot_slices.py  rotation_list.c  rotations.c  rotations.h  split_model.py
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
cmake/Modules/: FindConfig.cmake
cmake/src/: Makefile  cmake_install.cmake
cmake/src/emc/: Makefile  cmake_install.cmake  emc
cmake/src/utils/: Makefile  cmake_install.cmake  generate_rotations  modify_configuration
demos/: CMakeLists.txt  InsertFramesGivenRotations.cpp  InsertFramesWithGivenRotationsAndWeights.cpp  QusiOnline_EMC_V1.cpp  StochasticEMC.cu  boot_st.cpp  emc.conf  emc.cpp  emc_GetSlices_byRotationH5.cpp  emc_dis.cpp  emc_double_mask.cpp  emc_pg_sel.cpp  emc_withC_randImage.cpp  emc_withC_randImageF.cpp  emc_withCenter.cpp  mimi_best_rot.data  mimi_model.h5  opt_emc.cu  rot_sel.txt_save  try.cpp_save  try_performance.cu  write_test_log_file.cpp
demos/rotations_files/: rotations_1.h5  rotations_11.h5  rotations_12.h5  rotations_13.h5  rotations_14.h5  rotations_15.h5  rotations_2.h5  rotations_3.h5  rotations_4.h5  rotations_5.h5  rotations_6.h5  rotations_7.h5  rotations_8.h5  rotations_9.h5
include/: rotations.h
plot_model_qt_modular/: embedded_matplotlib.py  embedded_mayavi.py  fit_module.py  likelihood_module.py  modelmap_module.py  module_template.py  plot_model_qt_modular.py  rotations_module.py  weightmap_module.py
src/: CMakeLists.txt  rotations.c
src/emc/: CMakeLists.txt  configuration.c  configuration.h  emc.c  emc.h  emc_atomic.cu  emc_common.h  emc_cuda.cu
src/emc/CPU/: EMC_CPU_implenmentation.cpp
src/emc/CUDA/: emc_cuda.h  emc_cuda_2Dpatterns.cu  emc_cuda_2Dpatterns.h  emc_cuda_2Dpatterns_host.cu  emc_cuda_2Dpatterns_host.h  emc_cuda_3Dmodel.cu  emc_cuda_3Dmodel.h  emc_cuda_3Dmodel_host.cu  emc_cuda_3Dmodel_host.h  emc_cuda_Respons.h  emc_cuda_Respons_device.cu  emc_cuda_Respons_host.cu  emc_cuda_Respons_host.h  emc_cuda_Scaling.cu  emc_cuda_Scaling.h  emc_cuda_Scaling_device.cu  emc_cuda_Scaling_host.cu  emc_cuda_Scaling_host.h  emc_cuda_Slice.h  emc_cuda_Slice_device.cu  emc_cuda_Slice_host.cu  emc_cuda_Slice_host.h  emc_cuda_common.cu  emc_cuda_common.h  emc_cuda_common_host.cu  emc_cuda_common_host.h  emc_cuda_ec.cu  emc_cuda_ec.h  emc_cuda_ec_device.cu  emc_cuda_ec_host.cu  emc_cuda_ec_host.h  emc_cuda_fit.h  emc_cuda_fit_device.cu  emc_cuda_fit_host.cu  emc_cuda_fit_host.h  emc_cuda_memory_host.cu  emc_cuda_memory_host.h  emc_cuda_syscon.cu  emc_cuda_syscon_host.h  emc_cuda_weight.cu  (+1 more)
src/emc/Common/: TIMERhelper.cpp  TIMERhelper.h  emc_math.cpp  emc_math.h  errors.cpp  errors.h
src/emc/Configurations/: configuration.cpp  configuration.h
src/emc/IOs/: FILEhelper.cpp  FILEhelper.cpp.old  FILEhelper.h  FILEhelper.h.old  IOHDF5.cpp  IOHDF5.h  IOcommon.h
src/emc/MPIs/: MPIhelper.c  MPIhelper.cpp  MPIhelper.cpp.save  MPIhelper.h  MPIhelper.h.save
src/utils/: CMakeLists.txt  generate_rotations.c  modify_configuration.c  rotation_list.c  rotations.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake
tools/common/: generate_all_rotation_files.py
tools/visulization/: plot_slices.py
tools/visulization/viewer/: embedded_mayavi.py  image_module.py  likelihood_module.py  module_template.py  viewer.py
update_configuration_file/: update_configuration_file.py
viewer/: calculate_rotation_table.py  convenient_widgets.py  embedded_matplotlib.py  embedded_mayavi.py  fit_module.py  image_module.py  likelihood_module.py  modelmap_module.py  module_template.py  rotations_module.py  scaling_module.py  slice_module.py  viewer.py  weightmap_module.py
