cmake_minimum_required(VERSION 2.6)

PROJECT (emc)

#file(GLOB emc_source  src/emc/Common.*.c src/emc/Configurations/*.c src/emc/CUDA/*.cu src/emc/IOs/*.c src/emc/MPIs/*.c )

#cuda_add_executable(emc emc.c  $emc_source)
#cuda_add_cufft_to_target(emc)
#target_link_libraries(emc ${SPIMAGE_LIBRARIES} config ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES} ${HDF5_LIBRARIES})

